# mandate

./: .gitignore  .justfile  COPYING.md  Cargo.toml  PLAN.md  README.md  cog.toml  release-plz.toml
.github/: CACHING.md  dist-build-setup.yml
.github/actions/setup-rust-cache/: action.yml
.github/workflows/: bump.yml  ci.yml  release-plz.yml  release.yml
docs/: mandate.yml
docs/decisions/: adr-0001-markdown-parser.md  adr-0002-yaml-parser.md
src/: lib.rs  main.rs
tests/: cli.rs  markdown.rs  validation.rs  yaml.rs
tests/fixtures/: invalid_manual.yaml  valid_manual.yaml
