[package]
name = "mandate"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
pulldown-cmark = "0.11.3"
yaml-rust = { version = "0.10", package = "yaml-rust2" }
jsonschema = { version = "0.37.4", default-features = false }
serde_json = "1.0"
